erDiagram
    PATIENTS ||--o{ ENCOUNTERS : has
    ORGANIZATIONS ||--o{ PROVIDERS : employs
    ORGANIZATIONS ||--o{ ENCOUNTERS : hosts
    PROVIDERS ||--o{ ENCOUNTERS : records
    PAYERS ||--o{ ENCOUNTERS : covers
    PATIENTS ||--o{ ALLERGIES : has
    ENCOUNTERS ||--o{ ALLERGIES : records
    PATIENTS ||--o{ CAREPLANS : has
    ENCOUNTERS ||--o{ CAREPLANS : records
    PATIENTS ||--o{ CONDITIONS : has
    ENCOUNTERS ||--o{ CONDITIONS : records
    PATIENTS ||--o{ DEVICES : has
    ENCOUNTERS ||--o{ DEVICES : records
    PATIENTS ||--o{ IMAGING_STUDIES : has
    ENCOUNTERS ||--o{ IMAGING_STUDIES : records
    PATIENTS ||--o{ IMMUNIZATIONS : has
    ENCOUNTERS ||--o{ IMMUNIZATIONS : records
    PATIENTS ||--o{ MEDICATIONS : has
    ENCOUNTERS ||--o{ MEDICATIONS : records
    PAYERS ||--o{ MEDICATIONS : covers
    PATIENTS ||--o{ OBSERVATIONS : has
    ENCOUNTERS o|--o{ OBSERVATIONS : contextualizes
    PATIENTS ||--o{ PAYER_TRANSITIONS : has
    PAYERS ||--o{ PAYER_TRANSITIONS : covers
    PATIENTS ||--o{ PROCEDURES : has
    ENCOUNTERS ||--o{ PROCEDURES : records
    PATIENTS ||--o{ SUPPLIES : has
    ENCOUNTERS ||--o{ SUPPLIES : records
